--- a/src/components/sections/shared/ValueProposition.astro
+++ b/src/components/sections/shared/ValueProposition.astro
@@ -57,7 +57,7 @@ const {
 			stagger={true}
 		>
 			<p
-				class="text-center wsl-text-lg"
+				class="text-center wsl-text-lg text-gray-500"
 				set:html={body}
 			/>
 		</ScrollReveal>
