--- a/src/pages/schedule-call.astro
+++ b/src/pages/schedule-call.astro
@@ -25,11 +25,23 @@ import CTA from '@/components/sections/shared/CTA.astro';
 			class="w-full h-fit overflow-hidden"
 		>
 			<iframe
-				src="https://api.leadconnectorhq.com/widget/booking/wVqUyNTRTAkNiRa1bPTA"
-				style="width: 100%;border:none;overflow-y: scroll;"
-				scrolling="no"
-				id="2YLsJZYrXQYyjn9CfuDB_1752561372942"
-			></iframe>
+				src="https://api.leadconnectorhq.com/widget/form/oRpwRtJKwrjYlDzyxKA3"
+				style="width:100%;height:100%;border:none;border-radius:16px;overflow-y: scroll;"
+				id="inline-oRpwRtJKwrjYlDzyxKA3"
+				data-layout="{'id':'INLINE'}"
+				data-trigger-type="alwaysShow"
+				data-trigger-value=""
+				data-activation-type="alwaysActivated"
+				data-activation-value=""
+				data-deactivation-type="neverDeactivate"
+				data-deactivation-value=""
+				data-form-name="Website Demo Call Calendar form"
+				data-height="624"
+				data-layout-iframe-id="inline-oRpwRtJKwrjYlDzyxKA3"
+				data-form-id="oRpwRtJKwrjYlDzyxKA3"
+				title="Website Demo Call Calendar form"
+			>
+			</iframe>
 		</div>
 	</SubPageHero>
 	<Testimonials backgroundColor="bg-gray-50" />
