--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -67,11 +67,11 @@ const contactInfo: Contact[] = [
 		</div>
 		<div
 			slot="after-content"
-			class="w-full h-fit overflow-hidden"
+			class="w-full h-fit overflow-hidden px-2"
 		>
 			<iframe
 				src="https://api.leadconnectorhq.com/widget/form/DPgVyelrIJzLsRjld3cF"
-				style="width:100%;height:100%;border:none;border-radius:4px"
+				style="width:100%;height:100%;border:none;border-radius:16px"
 				id="inline-DPgVyelrIJzLsRjld3cF"
 				data-layout="{'id':'INLINE'}"
 				data-trigger-type="alwaysShow"
@@ -80,11 +80,11 @@ const contactInfo: Contact[] = [
 				data-activation-value=""
 				data-deactivation-type="neverDeactivate"
 				data-deactivation-value=""
-				data-form-name="Contact Us"
-				data-height="481"
+				data-form-name="Website Contact Us Form"
+				data-height="544"
 				data-layout-iframe-id="inline-DPgVyelrIJzLsRjld3cF"
 				data-form-id="DPgVyelrIJzLsRjld3cF"
-				title="Contact Us"
+				title="Website Contact Us Form"
 			>
 			</iframe>
 		</div>
