add who we help page content

--- a/src/components/sections/services/WhyWorksiteLeads.astro
+++ b/src/components/sections/services/WhyWorksiteLeads.astro
@@ -58,22 +58,25 @@ const benefits: Benefits[] = [
 interface Props {
 	title?: string;
 	subtitle?: string;
+	eyebrow?: string;
 	className?: string;
 }
 
 const {
-	title = 'All-in-One Digital Packages',
-	subtitle = 'more than just websites, we offer all-in-one packages designed to help you manage and grow your business',
+	title = "We Get What It's Like to Be in Your Boots",
+	eyebrow = 'Why Worksite Leads?',
 } = Astro.props as Props;
 ---
 
 <SectionContainer
 	title={title}
-	subtitle={subtitle}
+	eyebrow={eyebrow}
+	headerColor="text-gray-200"
+	textColor="text-gray-200"
 	backgroundColor="bg-gray-700"
 >
 	<div
-		class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 lg:gap-10"
+		class="grid grid-cols-1 mt-6 md:mt-12 sm:grid-cols-2 lg:grid-cols-3 gap-8 md:gap-y-20 lg:gap-x-10"
 		data-group-reveal
 	>
 		{
