--- a/src/components/ui/cards/ExtraServiceCard.astro
+++ b/src/components/ui/cards/ExtraServiceCard.astro
@@ -41,9 +41,9 @@ const variationStyles = {
 		background: '',
 	},
 	secondary: {
-		iconColor: 'text-primary-500',
+		iconColor: 'text-gray-100',
 		header: 'wsl-text-lg text-primary-500',
-		textColor: 'text-gray-100',
+		textColor: 'text-gray-200',
 		background: 'bg-gray-700',
 	},
 };
