add service subpage to footer link

--- a/src/components/ui/navigation/Footer.astro
+++ b/src/components/ui/navigation/Footer.astro
@@ -7,8 +7,21 @@ const footerLinks = [
 		href: '/',
 	},
 	{
-		name: 'Services',
-		href: '/services',
+		name: 'services',
+		childrenLinks: [
+			{
+				name: 'Website Development',
+				href: '/web-development',
+			},
+			{
+				name: 'AI Automation',
+				href: '/ai-automation',
+			},
+			{
+				name: 'Digital Marketing',
+				href: '/digital-marketing',
+			},
+		],
 	},
 	{
 		name: 'Who We Help',
